fix: implement suggestions from feedback from PR.